   skip building man pages when there's no location specified for them
   to go.

 - When copying files in the 'distdir' action, set permissions to match
   the original files. [Julian Mehnle]

 - When adding files like META.yml to the MANIFEST, we now tell the
   user we're doing so by printing one of the "Added to MANIFEST: ..."
   lines.  [Ron Savage]

 - A user-specified 'install_path' setting will now take precedence
   over an 'install_base' setting.  This allows the user to use
   'install_base' to set the base for all elements in one go, and then
   use 'install_path' to override specific paths or add paths for
   additional kinds of targets.

 * When using the 'install_base' option to choose a directory for
   installing everything, perl modules now go into lib/perl5/ instead
   of just lib/.  It seems this is more consistent with people's
   expectations, and the way I had it before was a bit peculiar to the
   way I like things in my own home directory. [Michael Schwern]

 - Added docs for run_perl_script().

 - Added some stuff to the docs about why PREFIX is unsupported, and
   what to use instead. [Steve Purkis]

 - The simple get/set accessor methods for all the 'parameters' like
   verbose(), license(), etc. now have auto-generated documentation in
   Module/Build.pm.

 - Created a Cookbook entry for 'Adding new elements to the install
   process'

 - We now add META.yml to the MANIFEST when META.yml is created, not
   when MANIFEST is created. [Spotted by Ron Savage]

 - Added some additional patterns to the suggested MANIFEST.SKIP
   contents, and changed the docs so that we encourage the user to use
   the MANIFEST.SKIP.  [Ron Savage]

 - Eliminated a redundant recipe from the Cookbook, now that there are
   some more extensive recipes on how to add stuff to the
   build/install sequences.

 - Eliminated an undefined-variable warning when testing under perl 5.005

 - When building HTML documentation, 'html_backlink' and 'html_css'