@@ -2,7 +2,7 @@
 
 use strict;
 use Test;
-BEGIN { plan tests => 43 }
+BEGIN { plan tests => 52 }
 use Module::Build;
 ok(1);
 
@@ -122,7 +122,7 @@ chdir 't';
   
   chdir 'Sample';
 
-  eval {Module::Build->run_perl_script('Build.PL', [], ['--config', "foocakes=barcakes", '--foo', '--bar', '--bar', '-bat=hello', 'gee=whiz', '--any', 'hey'])};
+  eval {Module::Build->run_perl_script('Build.PL', [], ['--config', "foocakes=barcakes", '--foo', '--bar', '--bar', '-bat=hello', 'gee=whiz', '--any', 'hey', '--destdir', 'yo', '--verbose', '1'])};
   ok $@, '';
   
   my $b = Module::Build->resume();
@@ -136,6 +136,15 @@ chdir 't';
   ok $b->args('gee'), 'whiz';
   ok $b->args('any'), 'hey';
   ok $b->args('dee'), 'goo';
+  ok $b->destdir, 'yo';
+  ok $b->runtime_params('destdir'), 'yo';
+  ok $b->runtime_params('verbose'), '1';
+  ok !$b->runtime_params('license');
+  ok my %runtime = $b->runtime_params;
+  ok scalar keys %runtime, 3;
+  ok $runtime{destdir}, 'yo';
+  ok $runtime{verbose}, '1';
+  ok $runtime{config};
 
   ok my $argsref = $b->args;
   ok $argsref->{foo}, 1;
